Cool changes made

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/hero/hero15.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logo/favicon3.svg" type="image/x-icon">
     <!-- Font Awesome Offline -->
     <link rel="stylesheet" href="assets/vendors/fontawesome-free-5.15.2-web/css/all.min.css">
     <!-- Font Awesome Online -->
@@ -27,7 +27,11 @@
 <body id="home">
     <!-- ====== Header ====== -->
     <nav class="navbar">
-        <a href="#home" class="nav-brand"><span class="brand-text">Celebrate</span></a>
+        <a href="#home" class="nav-brand">
+            <span class="brand-img">
+                <img src="assets/img/logo/logo5.svg" alt="">
+            </span>
+        </a>
         <label for="check" id="checkbtn">
             <div class="menu">
                 <div class="menu-bar-group-1">
