--- a/celebrate/pages/mc_change_pass.html
+++ b/celebrate/pages/mc_change_pass.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../assets/img/hero/hero15.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/logo/favicon3.svg" type="image/x-icon">
     <!-- Font Awesome Offline -->
     <link rel="stylesheet" href="../assets/vendors/fontawesome-free-5.15.2-web/css/all.min.css">
     <!-- Font Awesome Online -->
@@ -100,8 +100,7 @@
                             <div class="input-group">
                                 <h4 class="label">Current Password:</h4>
                                 <div class="pswd-1">
-                                    <input type="password" name="pswd" id="pswd_1" placeholder="Current Password"
-                                        required>
+                                    <input type="password" name="pswd" id="pswd_1" placeholder="Current Password" required>
                                     <i class="icon fas fa-lock"></i>
                                     <i class="eye fas fa-eye text-gray"></i>
                                     <i class="eye fas fa-eye-slash text-gray"></i>
@@ -119,8 +118,7 @@
                             <div class="input-group">
                                 <h4 class="label">Confirm Password:</h4>
                                 <div class="pswd-3">
-                                    <input type="password" name="pswd" id="pswd_2" placeholder="Confirm Password"
-                                        required>
+                                    <input type="password" name="pswd" id="pswd_2" placeholder="Confirm Password" required>
                                     <i class="icon fas fa-lock"></i>
                                     <i class="eye fas fa-eye text-gray"></i>
                                     <i class="eye fas fa-eye-slash text-gray"></i>
@@ -144,8 +142,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid">
-                    Let's party!
+                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
@@ -204,9 +201,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
