--- a/celebrate/pages/mc_profile.html
+++ b/celebrate/pages/mc_profile.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../assets/img/hero/hero15.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/logo/favicon3.svg" type="image/x-icon">
     <!-- Font Awesome Offline -->
     <link rel="stylesheet" href="../assets/vendors/fontawesome-free-5.15.2-web/css/all.min.css">
     <!-- Font Awesome Online -->
@@ -139,20 +139,12 @@
                     <div class="card p-4">
                         <h3 class="pb-1">My Calendar</h3>
                         <p>
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and
+                            only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                         </p>
                         <p>
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
-                            The one and only who could make your ceremony amazing, vibrating and full of joyous
-                            moments, no regret working with me.
+                            The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and
+                            only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                         </p>
                     </div>
                 </div>
@@ -168,8 +160,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid">
-                    Let's party!
+                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
@@ -228,9 +219,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
