--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../assets/img/hero/hero15.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/logo/favicon3.svg" type="image/x-icon">
     <!-- Font Awesome Offline -->
     <link rel="stylesheet" href="../assets/vendors/fontawesome-free-5.15.2-web/css/all.min.css">
     <!-- Font Awesome Online -->
@@ -25,7 +25,11 @@
 <body id="home">
     <!-- ====== Header ====== -->
     <nav class="navbar">
-        <a href="#home" class="nav-brand"><span class="brand-text">Celebrate</span></a>
+        <a href="#home" class="nav-brand">
+            <span class="brand-img">
+                <img src="../assets/img/logo/logo5.svg" alt="">
+            </span>
+        </a>
         <label for="check" id="checkbtn">
             <div class="menu">
                 <div class="menu-bar-group-1">
@@ -72,7 +76,7 @@
                 </div>
                 <div class="carts">
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc1.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Maeda</h5>
                         <p>
                             TZS 150,000,00.00
@@ -80,7 +84,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -88,7 +92,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-details">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="cart-img">
+                        <img src="../assets/img/mc/mc.jpg" alt="" class="cart-img">
                         <h5>MC Njozi</h5>
                         <p>
                             TZS 340,000,00.00
@@ -158,8 +162,7 @@
                                 <div class="inputs-text-box">
                                     <input type="text" name="fulname" id="fulname" placeholder="Review Title" required>
                                 </div>
-                                <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Message"
-                                    required></textarea>
+                                <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Message" required></textarea>
                                 <div class="rating flex pt-2">
                                     <i class="fas fa-star text-warning"></i>
                                     <i class="fas fa-star text-warning"></i>
@@ -199,9 +202,7 @@
                             <div class="card-text">
                                 <h3>Review Title</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at
-                                    quod
-                                    odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
                                 </p>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
@@ -222,9 +223,7 @@
                             <div class="card-text">
                                 <h3>Review Title</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at
-                                    quod
-                                    odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
                                 </p>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
@@ -245,9 +244,7 @@
                             <div class="card-text">
                                 <h3>Review Title</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at
-                                    quod
-                                    odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
                                 </p>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
@@ -272,9 +269,7 @@
                             <div class="card-text">
                                 <h3>Review Title</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at
-                                    quod
-                                    odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
                                 </p>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
@@ -295,9 +290,7 @@
                             <div class="card-text">
                                 <h3>Review Title</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at
-                                    quod
-                                    odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
                                 </p>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
@@ -318,9 +311,7 @@
                             <div class="card-text">
                                 <h3>Review Title</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at
-                                    quod
-                                    odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
                                 </p>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
@@ -343,9 +334,7 @@
                             <div class="card-text">
                                 <h3>Review Title</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at
-                                    quod
-                                    odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
                                 </p>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
@@ -366,9 +355,7 @@
                             <div class="card-text">
                                 <h3>Review Title</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at
-                                    quod
-                                    odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
                                 </p>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
@@ -389,9 +376,7 @@
                             <div class="card-text">
                                 <h3>Review Title</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at
-                                    quod
-                                    odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, illum tempore at quod odio error placeat aliquam culpa, quidem incidunt eveniet accusamus commodi ipsam
                                 </p>
                                 <div class="rating">
                                     <i class="fas fa-star text-warning"></i>
@@ -416,8 +401,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid">
-                    Let's party!
+                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
@@ -476,9 +460,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
