Awesome features added

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -156,17 +156,17 @@
                         <a href="#mcs" class="btn btn-primary">Book Now</a>
                     </div>
                     <div class="hero-img">
-                        <img src="assets/img/mc/gara_B.png" alt="" class="img-fluid">
+                        <img src="assets/img/mc/mc_hero.png" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
         </section>
         <!-- End Hero -->
 
-        <!-- MCs -->
-        <section id="mcs" class="text-black bg-light">
+        <!-- MCs Categories -->
+        <section id="mcs" class="categories text-black bg-light">
             <div class="container">
-                <h2 class="display-4 text-center text-primary pt-3">Categories</h2>
+                <h2 class="display-4 text-center text-black pt-3">Categories</h2>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
@@ -219,6 +219,36 @@
                 </div>
             </div>
         </section>
+        <!-- End MCs Categories -->
+
+        <!-- MCs -->
+        <section id="mcs" class="featured text-black bg-white">
+            <div class="container">
+                <h2 class="display-4 text-center text-dark pt-3">Featured</h2>
+                <div class="row flex even-columns pt-3 pb-0">
+                    <div class="col">
+                        <img src="assets/img/mc/mc4.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/mc/mc10.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/mc/mc8.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="row flex even-columns pt-0 pb-0">
+                    <div class="col">
+                        <img src="assets/img/mc/mc7.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/mc/mc6.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/mc/mc9.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- End MCs -->
 
         <!-- Better It -->
@@ -227,7 +257,7 @@
                 <h2 class="display-4 text-center text-black">Let's Better It</h2>
                 <div class="row flex even-columns py-5">
                     <div class="col">
-                        <img src="assets/img/hero/hero1.svg" alt="" class="img-fluid">
+                        <img src="assets/img/mc/mc12.png" alt="" class="img-fluid">
                     </div>
                     <div class="col col-text">
                         <h3 class="better-text">We make it</h3>
@@ -248,14 +278,14 @@
 
                 <div class="row flex even-columns py-5">
                     <div class="col col-text">
-                        <h3 class="you-text">We do it</h3>
+                        <h3 class="you-text">Let's do it for you</h3>
                         <p>
                             Plan your ceremony, function and event the better way with us as we keep track of the available masters of ceremony per a particular moments you make an appointment.
                         </p>
                         <a href="#" class="btn btn-primary">Read More</a>
                     </div>
                     <div class="col">
-                        <img src="assets/img/hero/hero13.svg" alt="" class="img-fluid">
+                        <img src="assets/img/mc/mc13.png" alt="" class="img-fluid">
                     </div>
 
                 </div>
@@ -266,17 +296,17 @@
         <!-- Schedule Yours -->
         <section id="schedule" class="bg-white text-black">
             <div class="container">
-                <h2 class="display-4 text-center text-black">Schedule Your Ceremony</h2>
+                <h2 class="display-4 text-center text-black">Ready To Roll</h2>
                 <div class="row flex even-columns py-5">
                     <div class="col">
-                        <img src="assets/img/hero/hero10.svg" alt="" class="img-fluid">
+                        <img src="assets/img/mc/mc1.png" alt=" " class="img-fluid ">
                     </div>
-                    <div class="col col-text">
-                        <h3 class="schedule-text">Let's schedule it</h3>
+                    <div class="col col-text ">
+                        <h3 class="schedule-text ">We're ready for you</h3>
                         <p>
                             Plan your ceremony, function and event the better way with us as we keep track of the available masters of ceremony per a particular moments you make an appointment.
                         </p>
-                        <a href="#" class="btn btn-primary">Read More</a>
+                        <a href="# " class="btn btn-primary ">Read More</a>
                     </div>
                 </div>
             </div>
@@ -292,17 +322,17 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
+                    <img src="assets/img/logo/logo5.svg " alt=" " class="img-fluid footer-logo ">
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
                         Site Map
                     </h3>
                     <nav class="footer-nav">
-                        <a href="#home">Home</a>
-                        <a href="pages/reviews.html">Reviews</a>
-                        <a href="pages/mybookings.html">My Bookings</a>
-                        <a href="pages/contact.html">Contact</a>
+                        <a href="../index.html">Home</a>
+                        <a href="reviews.html">Reviews</a>
+                        <a href="mybookings.html">My Bookings</a>
+                        <a href="#home">Contact</a>
                     </nav>
                 </div>
                 <div class="col">
@@ -351,12 +381,12 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js " integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin=" anonymous "></script>
     <!-- jQuery Offline -->
-    <script src="assets/vendors/jquery/jquery.min.js"></script>
+    <script src="assets/vendors/jquery/jquery.min.js "></script>
     <!-- Main JS -->
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/index.js"></script>
+    <script src="assets/js/main.js "></script>
+    <script src="assets/js/index.js "></script>
     <!-- End Scripts -->
 </body>
 
