--- a/celebrate/pages/book_mc_mixed.html
+++ b/celebrate/pages/book_mc_mixed.html
@@ -311,7 +311,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
+                    <img src="../assets/img/logo/logo5.svg " alt=" " class="img-fluid footer-logo">
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
