--- a/celebrate/pages/contact.html
+++ b/celebrate/pages/contact.html
@@ -230,7 +230,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/hero/hero13.svg" alt="" class="img-fluid"> Let's party!
+                    <img src="../assets/img/logo/logo5.svg " alt=" " class="img-fluid footer-logo ">
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
