--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -254,13 +254,13 @@
         <!-- Better It -->
         <section id="better_it" class="bg-white text-black">
             <div class="container">
-                <h2 class="display-4 text-center text-black">Let's Better It</h2>
+                <h2 class="display-4 text-center text-black">We Make It</h2>
                 <div class="row flex even-columns py-5">
                     <div class="col">
                         <img src="assets/img/mc/mc12.png" alt="" class="img-fluid">
                     </div>
                     <div class="col col-text">
-                        <h3 class="better-text">We make it</h3>
+                        <h3 class="better-text">Let's better it</h3>
                         <p>
                             Plan your ceremony, function and event the better way with us as we keep track of the available masters of ceremony per a particular moments you make an appointment.
                         </p>
@@ -274,7 +274,7 @@
         <!-- For you -->
         <section id="for_you" class="text-black bg-light">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">Just For You</h2>
+                <h2 class="display-4 text-center text-black">Just For You</h2>
 
                 <div class="row flex even-columns py-5">
                     <div class="col col-text">
