Awesome changes made

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -238,13 +238,24 @@
                 </div>
                 <div class="row flex even-columns pt-0 pb-0">
                     <div class="col">
-                        <img src="assets/img/mc/mc17.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col">
                         <img src="assets/img/mc/mc6.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col">
+                        <img src="assets/img/mc/mc20.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col">
                         <img src="assets/img/mc/mc18.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="row flex even-columns pt-0 pb-0">
+                    <div class="col">
+                        <img src="assets/img/mc/mc19.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/mc/mc21.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/mc/mc26.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -299,7 +310,7 @@
                 <h2 class="display-4 text-center text-black">Ready To Roll</h2>
                 <div class="row flex even-columns py-5">
                     <div class="col">
-                        <img src="assets/img/mc/mc1.png" alt=" " class="img-fluid ">
+                        <img src="assets/img/mc/mc14.png" alt=" " class="img-fluid ">
                     </div>
                     <div class="col col-text ">
                         <h3 class="schedule-text ">We're ready for you</h3>
