--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -171,48 +171,51 @@
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="assets/img/mc/mc31.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>Official MCs</h3>
+                            <h3>PROFESSIONAL</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                - Corporate events.
+                                <br> - Conferences and seminars.
                             </p>
                             <div class="add-cart-price">
-                                <a href="pages/book_mc_official.html" class="btn-cart">Select</a>
+                                <a href="pages/book_mc_official.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="assets/img/mc/mc30.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>Casual MCs</h3>
+                            <h3>STANDARD</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                - Wedding ceremonies.
+                                <br> - Send-off and kitchen parties.
                             </p>
                             <div class="add-cart-price">
-                                <a href="pages/book_mc_casual.html" class="btn-cart">Select</a>
+                                <a href="pages/book_mc_casual.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-img">
                             <div class="inner">
-                                <img src="assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                                <img src="assets/img/mc/mc29.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h3>Mixed MCs</h3>
+                            <h3>COMMUNINTY</h3>
                             <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                                - Social events.
+                                <br> - Graduation ceremonies.
                             </p>
                             <div class="add-cart-price">
-                                <a href="pages/book_mc_mixed.html" class="btn-cart">Select</a>
+                                <a href="pages/book_mc_mixed.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
