changes on navigation home id

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head id="home">
     <!-- Metadata -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,7 @@
     <title>Celebrate</title>
 </head>
 
-<body id="home">
+<body>
     <!-- ====== Header ====== -->
     <nav class="navbar">
         <a href="#home" class="nav-brand">
