--- a/celebrate/pages/mc_profile.html
+++ b/celebrate/pages/mc_profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head id="home">
     <!-- Metadata -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
     <title>Celebrate</title>
 </head>
 
-<body id="home">
+<body>
     <!-- ====== Header ====== -->
     <nav class="navbar">
         <!-- Dots Menu -->
