--- a/celebrate/pages/mc_home.html
+++ b/celebrate/pages/mc_home.html
@@ -159,12 +159,12 @@
             <div class="flex-space-between pt-2">
                 <div class="social">
                     <a href="#" target="_blank" rel="noopener noreferrer">
-                        <i class="fab fa-pinterest"></i>
+                        <i class="fab fa-youtube"></i>
                     </a>
                     <a href="#" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a href="#" target="_blank" rel="noopener noreferrer">
