--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -343,10 +343,10 @@
                         Site Map
                     </h3>
                     <nav class="footer-nav">
-                        <a href="../index.html">Home</a>
-                        <a href="reviews.html">Reviews</a>
-                        <a href="mybookings.html">My Bookings</a>
-                        <a href="#home">Contact</a>
+                        <a href="#home">Home</a>
+                        <a href="pages/reviews.html">Reviews</a>
+                        <a href="pages/mybookings.html">My Bookings</a>
+                        <a href="pages/contact.html">Contact</a>
                     </nav>
                 </div>
                 <div class="col">
