Beautiful features have been added

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -57,6 +57,9 @@
                 <a href="#home" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
+                <a href="pages/about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
                 <a href="pages/reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
@@ -73,7 +76,7 @@
             </div>
             <div class="cart">
                 <div class="basket-badge">
-                    <div class="badge">3</div>
+                    <div class="badge">0</div>
                     <i class="fas fa-shopping-basket"></i>
                 </div>
                 <div class="carts">
@@ -344,6 +347,7 @@
                     </h3>
                     <nav class="footer-nav">
                         <a href="#home">Home</a>
+                        <a href="pages/about.html">About</a>
                         <a href="pages/reviews.html">Reviews</a>
                         <a href="pages/mybookings.html">My Bookings</a>
                         <a href="pages/contact.html">Contact</a>
