--- a/celebrate/pages/contact.html
+++ b/celebrate/pages/contact.html
@@ -55,6 +55,9 @@
                 <a href="../index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
+                <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
@@ -71,7 +74,7 @@
             </div>
             <div class="cart">
                 <div class="basket-badge">
-                    <div class="badge">3</div>
+                    <div class="badge">0</div>
                     <i class="fas fa-shopping-basket"></i>
                 </div>
                 <div class="carts">
@@ -150,7 +153,7 @@
         <!-- Contact -->
         <section id="contact" class="text-black bg-white">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">Please fill in the form below to contact us</h2>
+                <h2 class="display-4 text-center text-primary">Get in touch</h2>
                 <div class="row flex even-columns pt-4 pb-3">
                     <div class="col col-form order-0">
                         <div class="contact-form">
@@ -186,7 +189,7 @@
                                     <h3>Email</h3>
                                     <p>
                                         info@celebrate.co.tz
-                                        <br> celebrate@gmail.com
+                                        <br> celebrate.tanzania@gmail.com
                                     </p>
                                 </div>
                             </div>
@@ -212,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="map">
+                <div class="map pt-3">
                     <h2 class="display-4 text-center text-primary">OUR LOCATION</h2>
                     <iframe title="IFM Map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.6367935266585!2d39.29122961471989!3d-6.8139554950752075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4b113fc2db53%3A0x1735d30e3398bba!2sInstitute%20of%20Finance%20Management%20(IFM)!5e0!3m2!1sen!2stz!4v1622844016338!5m2!1sen!2stz"
                         allowfullscreen="" loading="lazy">
@@ -238,6 +241,7 @@
                     </h3>
                     <nav class="footer-nav">
                         <a href="../index.html">Home</a>
+                        <a href="about.html">About</a>
                         <a href="reviews.html">Reviews</a>
                         <a href="mybookings.html">My Bookings</a>
                         <a href="#home">Contact</a>
@@ -298,4 +302,4 @@
     <!-- End Scripts -->
 </body>
 
-</html>
+<!-- </html> -->
